--- a/P010478.opf/meta.yml
+++ b/P010478.opf/meta.yml
@@ -1,7 +1,7 @@
-id: opecha:P010478
+id: P010478
 initial_creation_type: ocr
 source_metadata:
   id: bdr:W1KG13166
   title: བོད་ཀྱི་གཅེས་ཕྲུག
-  volume: ''
   author: ''
+  volumes: {}
