--- a/P010478.opf/meta.yml
+++ b/P010478.opf/meta.yml
@@ -4,4 +4,9 @@ source_metadata:
   id: bdr:W1KG13166
   title: བོད་ཀྱི་གཅེས་ཕྲུག
   author: ''
-  volumes: {}
+  volumes:
+    0f2e62afc53b4b969a730491dea0030b:
+      image_group_id: I1KG13483
+      title: ''
+      volume_number: 1
+      total_pages: 384
