--- a/P010478.opf/layers/v001/Pagination.yml
+++ b/P010478.opf/layers/v001/Pagination.yml
@@ -1,5 +1,5 @@
 id: ce329a399f424217ab3d068da87cf55c
-annotation_type: pagination
+annotation_type: Pagination
 revision: '00001'
 annotations:
   2390135a4b754d00814515b3928a8336:
